--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "preview-field",
   "main": "preview-field.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0",
+    "polymer": "Polymer/polymer#^2.0.0"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
